--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
 		</style>
 	</head>
-	<body class="body" style="width: 100%; height: 100%;">
+	<body class="body" style="width: 400; height: 600;">
 		<script type="text/javascript">
 			//Width and height
 			var w = 400;
